--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 	<div id="cards-container" class="d-flex justify-content-center flex-wrap">
 		<div class="card">
-			<img src="imgs/regolamento.png" class="card-img-top" alt="">
+			<img src="imgs/regolamento.png" class="card-img-top" id="regolamento" alt="regolamento">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Regolamento</h5>
 				<p class="card-body">Scopri il attrezzatura adottato
@@ -29,7 +29,7 @@
 		</div>
 		
 		<div class="card">
-			<img src="imgs/attrezzatura.png" class="card-img-top" alt="">
+			<img src="imgs/attrezzatura.png" class="card-img-top" id="attrezzatura" alt="attrezzatura">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Attrezzatura</h5>
 				<p class="card-body">Scopri le attrezzature utilizzate 
@@ -39,7 +39,7 @@
 		</div>
 		
 		<div class="card">
-			<img src="imgs/modalita-di-gioco.png" class="card-img-top" alt="">
+			<img src="imgs/modalita-di-gioco.png" class="card-img-top" id="modalita-di-gioco" alt="modalita-di-gioco">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Modalità di gioco</h5>
 				<p class="card-body">Scopri le modalità di gioco del tennis tavolo
@@ -49,7 +49,7 @@
 		</div>
 		
 		<div class="card">
-			<img src="imgs/colpi-tecnici-fondamentali.png" class="card-img-top" alt="">
+			<img src="imgs/colpi-tecnici-fondamentali.png" class="card-img-top" id="colpi-tecnici-fondamentali" alt="colpi-tecnici-fondamentali">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Colpi tecnici fondamentali</h5>
 				<p class="card-body">Scopri i colpi tecnici fondamentali del tennis tavolo
@@ -59,7 +59,7 @@
 		</div>
 		
 		<div class="card">
-			<img src="imgs/la-storia.png" class="card-img-top" id="storia" alt="">
+			<img src="imgs/la-storia.png" class="card-img-top" id="storia" alt="storia">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">La Storia</h5>
 				<p class="card-body">Scopri la storia del tennis tavolo
