--- a/pages/colpi-tecnici-fondamentali.html
+++ b/pages/colpi-tecnici-fondamentali.html
@@ -11,9 +11,22 @@
 	crossorigin="anonymous">
 	<!-- CSS -->
 	<link rel="stylesheet" href="../style.css">
+	<!-- CSS navbar -->
+	<link rel="stylesheet" href="../navbar.css">
 </head>
 <body>
-	
+	<nav>
+		<div class="navbar">
+			<ul>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="#">Regolamento</a></li>
+				<li><a href="attrezzatura.html">Attrezzatura</a></li>
+				<li><a href="modalita-di-gioco.html">Modalità</a></li>
+				<li><a class="active" href="colpi-tecnici-fondamentali.html">Colpi</a></li>
+				<li><a href="storia.html">Storia</a></li>
+			</ul>
+		</div>
+	</nav>
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
