--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</div>
 	
 	<div id="cards-container" class="d-flex justify-content-center flex-wrap">
-		<div class="card">
-			<img src="imgs/regolamento.png" class="card-img-top" id="regolamento" alt="regolamento">
+		<div class="card" id="regolamento">
+			<img src="imgs/regolamento.png" class="card-img-top" alt="regolamento">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Regolamento</h5>
 				<p class="card-body">Scopri il attrezzatura adottato
@@ -28,8 +28,8 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<img src="imgs/attrezzatura.png" class="card-img-top" id="attrezzatura" alt="attrezzatura">
+		<div class="card" id="attrezzatura">
+			<img src="imgs/attrezzatura.png" class="card-img-top" alt="attrezzatura">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Attrezzatura</h5>
 				<p class="card-body">Scopri le attrezzature utilizzate 
@@ -38,8 +38,8 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<img src="imgs/modalita-di-gioco.png" class="card-img-top" id="modalita-di-gioco" alt="modalita-di-gioco">
+		<div class="card" id="modalita-di-gioco">
+			<img src="imgs/modalita-di-gioco.png" class="card-img-top" alt="modalita-di-gioco">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Modalità di gioco</h5>
 				<p class="card-body">Scopri le modalità di gioco del tennis tavolo
@@ -48,8 +48,8 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<img src="imgs/colpi-tecnici-fondamentali.png" class="card-img-top" id="colpi-tecnici-fondamentali" alt="colpi-tecnici-fondamentali">
+		<div class="card" id="colpi-tecnici-fondamentali">
+			<img src="imgs/colpi-tecnici-fondamentali.png" class="card-img-top" alt="colpi-tecnici-fondamentali">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Colpi tecnici fondamentali</h5>
 				<p class="card-body">Scopri i colpi tecnici fondamentali del tennis tavolo
@@ -58,8 +58,8 @@
 			</div>
 		</div>
 		
-		<div class="card">
-			<img src="imgs/la-storia.png" class="card-img-top" id="storia" alt="storia">
+		<div class="card" id="storia">
+			<img src="imgs/la-storia.png" class="card-img-top" alt="storia">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">La Storia</h5>
 				<p class="card-body">Scopri la storia del tennis tavolo
