--- a/pages/regolamento.html
+++ b/pages/regolamento.html
@@ -25,6 +25,149 @@
 			<li><a href="storia.html">Storia</a></li>
 		</ul>
 	</nav>
+	
+	<div class="intro">
+		<p>
+			Il <b>tennis tavolo</b>, noto anche come ping pong, è uno sport regolato dalla 
+			<b>Federazione Internazionale di Tennis Tavolo (ITTF)</b>. Le partite si giocano 
+			tra due avversari (singolare) o due coppie (doppio) su un tavolo diviso 
+			da una rete. L'obiettivo è colpire la pallina in modo che 
+			l’avversario non riesca a rispondere correttamente.
+		</p>
+	</div>
+	
+	<div class="main-content">
+		<h2 class="subtitle"><b>Regole di Base</b></h2>
+		<p>
+			Una partita si gioca al meglio di <b>5 o 7 set</b>, e ogni set si vince totalizzando 
+			<b>11 punti</b> con almeno <b>2 punti di vantaggio</b>. 
+			Se il punteggio arriva a <b>10-10</b>, il gioco continua finché un 
+			giocatore ottiene due punti di scarto.
+			Il servizio cambia ogni due punti e deve essere 
+			eseguito lanciando la pallina in aria e colpendola 
+			dietro la linea di fondo. 
+			Nel doppio, il servizio deve essere diagonale e i giocatori 
+			devono alternarsi nei colpi.
+		</p>
+		
+		<h2 class="subtitle"><b>Punti e Penalità</b></h2>
+		<p>
+			Nel tennis tavolo un punto viene assegnato a un 
+			giocatore quando l’avversario commette un errore o non
+			riesce a rispondere correttamente al colpo. 
+			Ecco i principali modi in cui un punto può essere 
+			guadagnato:
+			<ul class="table-tennissed-list">
+				<li>
+					<p>
+						<b>Errore di risposta</b> - L’avversario non colpisce 
+						la pallina prima del secondo rimbalzo sul 
+						proprio lato del tavolo. 
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Colpo fuori dal campo</b> - L’avversario colpisce 
+						la pallina e questa non tocca il lato opposto del tavolo.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Errore di seervizio</b> - Il battitore non effettua 
+						un servizio corretto (ad esempio, non lancia la 
+						pallina verticalmente di almeno 16 cm o non la 
+						colpisce dietro la linea di fondo).
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Colpo irregolare</b> - Il giocatore colpisce la 
+						pallina con una parte non valida della racchetta 
+						o con il corpo.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Doppio rimbalzo</b> - Se la pallina rimbalza due 
+						volte sul lato del tavolo del giocatore prima 
+						di essere colpita.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Contatto non valido</b> - Se un giocatore tocca 
+						il tavolo con la mano libera o sposta intenzionalmente 
+						la superficie di gioco.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Ostruzione della pallina</b> - Se un giocatore intercetta 
+						la pallina prima che tocchi il proprio lato del tavolo.
+					</p>
+				</li>
+			</ul>
+			<br><br>
+			<p>
+				Invece, di seguito, potrai trovare le regole
+				che definiscono la validità di un servizio:
+			</p>
+
+			<ul class="table-tennissed-list">
+				<li>
+					<p>
+						Il servizio deve essere <b>effettuato 
+						lanciando la pallina verticalmente di 
+						almeno 16 cm</b> e colpendola dietro la 
+						linea di fondo.
+					</p>
+				</li>
+				<li>
+					<p>
+						Se la pallina tocca la rete durante 
+						il servizio ma atterra correttamente 
+						nel campo avversario, viene chiamato un 
+						<b>let</b> e il servizio viene ripetuto senza penalità.
+					</p>
+				</li>
+				<li>
+					<p>
+						Se il servizio è irregolare 
+						(ad esempio, la pallina non viene lanciata 
+						correttamente), l’avversario guadagna un punto.
+					</p>
+				</li>
+			</ul>
+			<br><br>
+			<p>
+				Nel tennis tavolo, possono essere assegnate delle
+				<b>penalità disciplinari</b>, queste sono:
+			</p>
+			
+			<ul class="table-tennissed-list">
+				<li>
+					<p>
+						<b>Avvertimento verbale</b> 
+						per comportamenti scorretti o ritardi 
+						intenzionali.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Cartellino giallo</b> per infrazioni
+						ripetute.
+					</p>
+				</li>
+				<li>
+					<p>
+						<b>Cartellino rosso</b> che comporta la perdita
+						di un punto o, nei casi più gravi, la squalifica dal match.
+					</p>
+				</li>
+			</ul>
+		</p>
+	</div>
+	
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
