--- a/pages/attrezzatura.html
+++ b/pages/attrezzatura.html
@@ -26,6 +26,52 @@
 		</ul>
 	</nav>
 	
+	<div class="intro">
+		<p>
+			Il <b>tennis tavolo</b> richiede un’attrezzatura 
+			specifica regolamentata dalla <b>Federazione 
+			Internazionale di Tennis Tavolo (ITTF)</b> per 
+			garantire uniformità e correttezza nel gioco. 
+			Gli elementi principali includono <b>il tavolo, 
+			la rete, la racchetta e la pallina</b>.
+		</p>
+	</div>
+		
+	<div class="main-content">
+		<h2 class="subtitle"><b>Il Tavolo e la Rete</b></h2>
+		<p>
+			Il tavolo ha dimensioni standard di <b>2,74 metri 
+			di lunghezza, 1,525 metri di larghezza e 76 cm 
+			di altezza</b>. La superficie deve essere opaca, 
+			solitamente di colore verde o blu, e deve 
+			garantire un rimbalzo uniforme della pallina. 
+			Al centro, una rete di <b>15,25 cm di altezza</b> 
+			divide il campo in due metà uguali.
+		</p>
+		
+		<h2 class="subtitle"><b>La Racchetta</b></h2>
+		<p>
+			La racchetta è composta da un telaio in legno 
+			con due superfici rivestite di gomma, 
+			che possono avere caratteristiche diverse per 
+			effetti di gioco come rotazioni o velocità variabili. 
+			Il colore delle superfici deve essere <b>nero da un 
+			lato e rosso dall’altro</b> per distinguere gli 
+			effetti durante il gioco.
+		</p>
+		
+		<h2 class="subtitle"><b>La Pallina</b></h2>
+		<p>
+			La pallina da tennis tavolo ha un diametro di 
+			<b>40 mm</b> e un peso di <b>2,7 grammi</b>. 
+			È realizzata in materiale plastico e 
+			deve garantire un rimbalzo uniforme sul tavolo. 
+			I colori ammessi sono <b>bianco o arancione</b>, con 
+			una finitura opaca per migliorare la visibilità 
+			durante il gioco.
+		</p>
+	</div>
+	
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
