Modalità di gioco page

--- a/pages/modalita-di-gioco.html
+++ b/pages/modalita-di-gioco.html
@@ -26,6 +26,60 @@
 		</ul>
 	</nav>
 	
+	<div class="intro">
+		<p>
+			Il <b>tennis tavolo</b> può essere giocato in diverse 
+			modalità, regolamentate dalla <b>Federazione 
+			Internazionale di Tennis Tavolo (ITTF)</b>. 
+			Le principali varianti includono <b>il singolare, 
+			il doppio e il misto,</b> ognuna con regole specifiche.
+		</p>
+	</div>
+		
+	<div class="main-content">
+		<h2 class="subtitle"><b>Singolare</b></h2>
+		<p>
+			Nel singolare, il match si disputa tra due giocatori. 
+			I servizi vengono alternati ogni due punti e possono 
+			essere eseguiti in qualsiasi direzione sul campo 
+			avversario. Il vincitore è il primo giocatore a 
+			raggiungere <b>11 punti con almeno 2 di vantaggio</b>, o, 
+			in caso di parità a 10-10, fino a quando un 
+			giocatore ottiene il distacco necessario.
+		</p>
+		
+		<h2 class="subtitle"><b>Doppio</b></h2>
+		<p>
+			Il doppio coinvolge <b>quattro giocatori</b>, 
+			divisi in due squadre. Ogni coppia deve colpire 
+			la pallina a turni alterni e il servizio deve essere 
+			eseguito obbligatoriamente in diagonale da destra 
+			verso sinistra. L’ordine dei battitori e 
+			dei ricevitori cambia ogni due punti, 
+			mentre alla fine di ogni set si invertono anche 
+			le posizioni dei giocatori.
+		</p>
+		
+		<h2 class="subtitle"><b>Doppio Misto</b></h2>
+		<p>
+			Simile al doppio, ma le squadre devono essere 
+			composte da un uomo e una donna. Le regole 
+			sono identiche al doppio tradizionale, con turni 
+			di battuta e risposta alternati tra i membri della 
+			coppia.
+		</p>
+		
+		<h2 class="subtitle"><b>Modalità Speciali</b></h2>
+		<p>
+			Oltre alle modalità ufficiali, esistono varianti 
+			come il <b>gioco a squadre</b> (dove si affrontano più 
+			giocatori in successione), il <b>ping pong cinese</b> 
+			(dove i giocatori corrono attorno al tavolo per 
+			colpire la pallina) e il <b>singolare adattato</b> per 
+			competizioni paralimpiche.
+		</p>
+	</div>
+	
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
