Colpi tecnici fondamentali page

--- a/pages/colpi-tecnici-fondamentali.html
+++ b/pages/colpi-tecnici-fondamentali.html
@@ -25,6 +25,95 @@
 			<li><a href="storia.html">Storia</a></li>
 		</ul>
 	</nav>
+	
+	<div class="intro">
+		<p>
+			Nel <b>tennis tavolo</b>, i colpi tecnici sono essenziali 
+			per controllare il gioco e mettere in difficoltà 
+			l’avversario. I principali <b>colpi si dividono in 
+			colpi di attacco, difesa e servizio</b>, ognuno con 
+			caratteristiche specifiche.
+		</p>
+	</div>
+		
+	<div class="main-content">
+		<h2 class="subtitle"><b>Topspin</b></h2>
+		<p>
+			Uno dei colpi più usati, 
+			consiste nel colpire la pallina con 
+			un movimento verso l’alto per imprimere 
+			una forte rotazione in avanti, rendendola 
+			più difficile da bloccare.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video autoplay loop muted playsinline>
+				<source src="../videos/topspin.webm" type="video/webm">
+			</video>
+		</div>
+		
+		<h2 class="subtitle"><b>Smash</b></h2>
+		<p>
+			Colpo potente e veloce eseguito su palline alte, 
+			mirato a chiudere lo scambio con un vincente.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video autoplay loop muted playsinline>
+				<source src="../videos/smash.webm" type="video/webm">
+			</video>
+		</div>
+		
+		<h2 class="subtitle"><b>Flip</b></h2>
+		<p>
+			Un attacco rapido su una 
+			pallina corta, spesso usato per 
+			sorprendere l’avversario e prendere il controllo 
+			dello scambio.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video autoplay loop muted playsinline>
+				<source src="../videos/flip.webm" type="video/webm">
+			</video>
+		</div>
+		
+		<h2 class="subtitle"><b>Backspin</b></h2>
+		<p>
+			Colpo con effetto contrario al topspin, 
+			che fa rimbalzare la pallina più 
+			lentamente e con una traiettoria 
+			discendente, rendendo difficile 
+			l’attacco avversario.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video autoplay loop muted playsinline>
+				<source src="../videos/backspin.webm" type="video/webm">
+			</video>
+		</div>
+		
+		<h2 class="subtitle"><b>Block</b></h2>
+		<p>
+			Un colpo corto eseguito con la racchetta
+			ferma per respingere l’attacco avversario 
+			e ridurre la velocità della pallina.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video id="block-video" autoplay loop muted playsinline>
+				<source src="../videos/block.webm" type="video/webm">
+			</video>
+		</div>
+		
+		<h2 class="subtitle"><b>Lob</b></h2>
+		<p>
+			Un colpo difensivo alto e profondo, 
+			usato per recuperare posizioni quando 
+			si è sotto pressione.
+		</p>
+		<div class="d-flex justify-content-center">
+			<video autoplay loop muted playsinline>
+				<source src="../videos/lob.webm" type="video/webm">
+			</video>
+		</div>
+	</div>
+	
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
 	integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
