Fix syntax mistake

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img src="imgs/regolamento.png" class="card-img-top" alt="regolamento">
 			<div class="card-img-overlay text-center">
 				<h5 class="card-title">Regolamento</h5>
-				<p class="card-body">Scopri il attrezzatura adottato
+				<p class="card-body">Scopri il regolamento adottato
 					per giocare le tue partite correttamente!<br>Clicca qui.</p>
 				<p class="card-body d-none">Scopri di più cliccando qui!</p>
 			</div>
