--- a/pages/storia.html
+++ b/pages/storia.html
@@ -18,13 +18,59 @@
 	<nav>
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="#">Regolamento</a></li>
+			<li><a href="regolamento.html">Regolamento</a></li>
 			<li><a href="attrezzatura.html">Attrezzatura</a></li>
 			<li><a href="modalita-di-gioco.html">Modalità</a></li>
 			<li><a href="colpi-tecnici-fondamentali.html">Colpi</a></li>
-			<li><a class="active" href="storia.html">Storia</a></li>
+			<li><a class="active" href="#">Storia</a></li>
 		</ul>
 	</nav>
+	
+	<div class="intro">
+		<p>
+			Il <b>tennis tavolo</b> ha origini che 
+			risalgono alla fine del <b>XIX secolo</b>, 
+			quando in <b>Inghilterra</b> veniva praticato 
+			come passatempo indoor dalle classi aristocratiche. I primi giocatori usavano libri come rete, tappi di sughero come pallina e coperchi di scatole come racchette.
+		</p>
+	</div>
+		
+	<div class="main-content">
+		<h2 class="subtitle"><b>Dalla nascita alla diffusione internazionale</b></h2>
+		<p>
+			Nel <b>1901</b>, il termine <b>"ping pong"</b> fu registrato 
+			come marchio e l’attrezzatura divenne più 
+			standardizzata, con palline di celluloide e 
+			tavoli definiti. Negli anni '20, il gioco si 
+			diffuse rapidamente in <b>Europa e Asia</b>, portando 
+			alla nascita della <b>Federazione Internazionale di 
+			Tennis Tavolo (ITTF) nel 1926</b> e all’organizzazione
+			del primo Campionato Mondiale 
+			nello stesso anno.
+		</p>
+		
+		<h2 class="subtitle"><b>L'epoca moderna e il dominio asiatico</b></h2>
+		<p>
+			A partire dagli anni '50, la Cina e altri 
+			paesi asiatici come il Giappone e la Corea 
+			del Sud hanno dominato la scena internazionale, 
+			sviluppando tecniche di gioco innovative. 
+			Il tennis tavolo è diventato <b>sport olimpico 
+			ufficiale nel 1988</b>, consolidando la sua popolarità 
+			a livello globale.
+		</p>
+		
+		<h2 class="subtitle"><b>Evoluzione e innovazioni recenti</b></h2>
+		<p>
+			Negli ultimi decenni, il regolamento è 
+			stato modificato per rendere il gioco 
+			più spettacolare, aumentando il diametro della
+			pallina a <b>40 mm</b> e riducendo i set da <b>21 a 11 
+			punti</b>. Oggi il tennis tavolo è praticato in 
+			tutto il mondo, con milioni di giocatori e 
+			tornei a livello professionistico e amatoriale.
+		</p>
+	</div>
 	
 	<!-- Script bootstrap -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
