--- a/pages/attrezzatura.html
+++ b/pages/attrezzatura.html
@@ -18,8 +18,8 @@
 	<nav>
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="#">Regolamento</a></li>
-			<li><a class="active" href="attrezzatura.html">Attrezzatura</a></li>
+			<li><a href="regolamento.html">Regolamento</a></li>
+			<li><a class="active" href="#">Attrezzatura</a></li>
 			<li><a href="modalita-di-gioco.html">Modalità</a></li>
 			<li><a href="colpi-tecnici-fondamentali.html">Colpi</a></li>
 			<li><a href="storia.html">Storia</a></li>
