--- a/pages/modalita-di-gioco.html
+++ b/pages/modalita-di-gioco.html
@@ -18,9 +18,9 @@
 	<nav>
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="#">Regolamento</a></li>
+			<li><a href="regolamento.html">Regolamento</a></li>
 			<li><a href="attrezzatura.html">Attrezzatura</a></li>
-			<li><a class="active" href="modalita-di-gioco.html">Modalità</a></li>
+			<li><a class="active" href="#">Modalità</a></li>
 			<li><a href="colpi-tecnici-fondamentali.html">Colpi</a></li>
 			<li><a href="storia.html">Storia</a></li>
 		</ul>
