--- a/pages/colpi-tecnici-fondamentali.html
+++ b/pages/colpi-tecnici-fondamentali.html
@@ -18,10 +18,10 @@
 	<nav>
 		<ul>
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="#">Regolamento</a></li>
+			<li><a href="regolamento.html">Regolamento</a></li>
 			<li><a href="attrezzatura.html">Attrezzatura</a></li>
 			<li><a href="modalita-di-gioco.html">Modalità</a></li>
-			<li><a class="active" href="colpi-tecnici-fondamentali.html">Colpi</a></li>
+			<li><a class="active" href="#">Colpi</a></li>
 			<li><a href="storia.html">Storia</a></li>
 		</ul>
 	</nav>
