--- a/pages/modalita-di-gioco.html
+++ b/pages/modalita-di-gioco.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Modalità di Gioco - Tennis Tavolo</title>
+	<!-- Icon -->
+	<link rel="icon" type="image" href="imgs/table-tennis-rackets.png">
 	<!-- CSS Bootstrap -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
 	rel="stylesheet" 
